--- a/style.css
+++ b/style.css
@@ -367,8 +367,8 @@ button {
   top: 40%;
   opacity: 80%;
   transform: translateY(-50%);
-  background: var(--secondary-color);
-  color: var(--white-color);
+  background: none;
+  color: var(--primary-color);
   border: none;
   padding: 10px 15px;
   cursor: pointer;
